--- a/web/src/pages/document.ejs
+++ b/web/src/pages/document.ejs
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <!-- <link rel="shortcut icon" href="favicon.ico"> -->
-  <title>running in the 19</title>
+  <title>TNA Speedrun</title>
 </head>
 <body>
   <div id="root"></div>
