--- a/web/src/components/MODS.scss
+++ b/web/src/components/MODS.scss
@@ -1,49 +1,35 @@
 @import '../layouts/vars';
 
-.mod {
-  background-color: rgba(black, 0.3);
-  padding: 1rem;
-  border-radius: 0.5rem;
-  margin-bottom: 0.5rem;
-  display: flex;
-
-  @media #{$xs} {
-    display: block;
-    .cover {
-      margin-bottom: 1rem;
-    }
+.moditeminfo {
+  h4 {
+    margin: 0;
+    font-size: 1rem;
+    // font-weight: normal;
   }
 
-  .cover {
-    margin-right: 1rem;
-    img {
-      width: 11rem;
-      height: 11rem;
-      border-radius: 0.5rem;
-      display: block;
-    }
+  h5 {
+    margin: 0;
+    margin-top: 0.3rem;
+    font-size: 1rem;
+    font-family: 'Cubano';
+    font-weight: normal;
   }
 
-  .info {
-    flex: 1;
-
-    h4 {
-      margin: 0;
-      font-size: 1.5rem;
-    }
-  
-    h5 {
-      margin: 0;
-      margin-top: 0.3rem;
-      color: gold;
-      font-size: 1.2rem;
-    }
-  
-    .splink {
-      margin-top: 2rem;
-      font-size: 0.9rem;
-      opacity: 0.6;
-    }
+  h6 {
+    margin: 0;
+    margin-top: 0.3rem;
+    font-size: 1rem;
+    color: gold;
+    font-family: 'Cubano';
   }
 
+  .splink {
+    margin-top: 1rem;
+    font-size: 0.9rem;
+    opacity: 0.6;
+    font-family: 'DIN-Black';
+  }
+  .splinka {
+    font-family: 'DIN-Black';
+  }
 }
