--- a/web/src/components/StrawberryH3.scss
+++ b/web/src/components/StrawberryH3.scss
@@ -1,16 +1,23 @@
 h3.sh3 {
   margin-bottom: 1rem;
-  font-size: 1.5rem;
-  border-bottom: dashed 1px rgba(#d7ecff, 0.5);
-  padding-bottom: 0.5rem;
+  font-size: 1.2rem;
   position: relative;
-  padding-left: 1.8rem;
+  padding-left: 1.5rem;
+  font-family: 'DIN-Black';
+  font-weight: bold;
+
   &:before {
     content: '';
-    width: 32px; height: 32px;
+    width: 28px; height: 28px;
     background: url('@/assets/images/celeste-strawberry.png') no-repeat;
     background-size: cover;
     position: absolute;
-    left: -0.5rem;
+    left: -0.3rem;
+    top: 0.1rem;
+  }
+
+  span {
+    margin-left: 0.5rem;
+    font-size: 1rem;
   }
 }
