--- a/web/src/pages/shot19/index.scss
+++ b/web/src/pages/shot19/index.scss
@@ -1,5 +1,74 @@
 @import '../../layouts/vars';
 
+@keyframes cool {
+  0% { opacity: 1; }
+  50% { opacity: 0.5; }
+  100% { opacity: 1; }
+}
+
+.coollink {
+  display: flex;
+
+  .arrow {
+    width: 4.5rem;
+
+    .a1, .a2, .a3 {
+      position: relative;
+      animation: cool 1s infinite;
+
+      &:before {
+        content: '';
+        box-sizing: border-box;
+        position: absolute;
+        width: 1.2rem; height: 1.2rem;
+        border-style: solid;
+        border-right: 0 none;
+        border-bottom: 0 none;
+        // border-radius: 0;
+        border-color: white;
+        border-width: 0.4rem;
+        transform: rotate(135deg);
+        left: -0.25rem;
+        top: 1rem;
+      }
+    }
+
+    .a1 {
+      transform: translateX(0);
+      animation-delay: 0;
+    }
+    .a2 {
+      transform: translateX(1.1rem);
+      animation-delay: .2s;
+    }
+    .a3 {
+      transform: translateX(2.2rem);
+      animation-delay: .4s;
+    }
+  }
+
+  a { 
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: $light-bg-color;
+    color: white; 
+    font-size: 1.5rem;
+    font-weight: bold;
+    border-radius: 0.5rem;
+    height: 3.2rem;
+    text-shadow: 0 0 0.5rem rgba(black, 0.3);
+    margin-right: -0.5rem;
+  }
+
+  @media #{$xs} {
+    a {
+      font-size: 1.2rem;
+    }
+  }
+}
+
 .stg {
   h4 {
     margin-top: 0;
