--- a/web/src/components/games/CategoriesTab.scss
+++ b/web/src/components/games/CategoriesTab.scss
@@ -2,8 +2,10 @@
 
 .tabs {
   display: flex;
-  margin-top: 1rem;
   border-bottom: solid .2rem rgba(black, 0.5);
+  flex-wrap: wrap;
+  margin-top: -.2rem;
+
   .tab, .miscellaneousTab {
     background-color: rgba(black, 0.3);
     color: rgba($text-color, 0.3);
@@ -11,7 +13,9 @@
     margin-right: .5rem;
     border-radius: .3rem .3rem 0 0;
     font-size: .8rem;
+    white-space: nowrap;
     cursor: pointer;
+    margin-top: .2rem;
 
     &.selected {
       color: $text-color;
@@ -64,8 +68,9 @@
 }
 
 .varTabs {
-  padding: .5rem 1rem;
+  padding: .5rem 1rem .8rem;
   background: rgba(black, 0.5);
+  border-bottom: solid 1px rgba(white, 0.2);
   .stabs {
     display: flex;
     margin-bottom: .5rem;
@@ -89,6 +94,32 @@
         color: white;
         background-color: $light-bg-color;
       }
+    }
+  }
+}
+
+.rules {
+  padding: .5rem 1rem;
+  background-color: rgba(black, 0.5);
+  h3 {
+    font-size: .9rem;
+    margin: 0;
+    margin-bottom: .5rem;
+    color: $text-color-gold;
+  }
+  .text {
+    padding: .5rem;
+    border-radius: .3rem;
+    background-color: rgba(white, 0.1);
+    white-space: pre-wrap;
+    // font-family: serif;
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: .9rem;
+    p {
+      margin: 0;
+    }
+    strong {
+      color: $text-color-gold;
     }
   }
 }
