--- a/web/src/components/games/GameHeader.scss
+++ b/web/src/components/games/GameHeader.scss
@@ -1,8 +1,8 @@
+@import '../../layouts/vars';
+
 .header {
   display: flex;
   background-color: rgba(black, 0.4);
-  margin-top: 1rem;
-  padding: 1rem;
 
   .cover {
     $csize: 11rem;
@@ -13,7 +13,7 @@
     align-items: center;
     background: rgba(black, 0.4);
     padding: 1rem;
-    margin: -1rem 2rem -1rem -1rem;
+    margin-right: 1rem;
     img {
       max-width: 100%;
       max-height: 100%;
@@ -21,10 +21,22 @@
       border: solid 1px rgba(white, 0.3);
       padding: 2px;
     }
+
+    @media #{$xs} {
+      width: 6rem; height: auto;
+      margin-right: 0;
+    }
   }
   .baseinfo {
     flex: 1;
     font-family: 'DIN-Black';
+    padding: 1rem;
+
+    @media #{$xs} {
+      padding: .5rem;
+      padding-left: 1rem;
+    }
+
     .name {
       font-size: 1.5rem;
       margin: 0;
@@ -33,16 +45,31 @@
         font-size: 1rem;
         margin-top: .3rem;
       }
+
+      @media #{$xs} {
+        font-size: 1rem;
+        margin-bottom: .5rem;
+      }
     }
     .speedrunlink {
       margin-bottom: 1rem;
+      @media #{$xs} {
+        font-size: .9rem;
+        margin-bottom: .5rem;
+      }
     }
     .released {
       margin-bottom: .5rem;
+      @media #{$xs} {
+        font-size: .9rem;
+      }
     }
     .platforms {
       .slash {
         opacity: 0.6;
+      }
+      @media #{$xs} {
+        font-size: .9rem;
       }
     }
   }
