--- a/web/src/pages/games/$abbr.scss
+++ b/web/src/pages/games/$abbr.scss
@@ -1,7 +1,15 @@
+@import '../../layouts/vars';
+
+.game {
+  padding-top: 1rem;
+  @media #{$xs} {
+    padding-top: .5rem;
+  }
+}
+
 .loading {
   display: flex;
   background-color: rgba(black, 0.4);
-  margin-top: 1rem;
   padding: 1rem;
   justify-content: center;
   align-items: center;
@@ -10,4 +18,13 @@
     margin-right: 1.5rem;
     font-size: 1.2rem;
   }
+}
+
+.intro {
+  background-color: rgba(black, 0.4);
+  font-size: .9rem;
+  margin-top: .5rem;
+  margin-bottom: .5rem;
+  padding: .6rem 1rem;
+  // border-radius: .3rem;
 }
