增加转播控制台

--- a/web/src/pages/document.ejs
+++ b/web/src/pages/document.ejs
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <!-- <link rel="shortcut icon" href="favicon.ico"> -->
   <title>TNA Speedrun</title>
+  <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/video.js/7.3.0/alt/video-js-cdn.min.css" rel="stylesheet"> -->
 </head>
 <body>
   <div id="root"></div>
@@ -13,5 +14,10 @@
   <div style='display:none;'>
   <script type="text/javascript" src="https://s5.cnzz.com/z_stat.php?id=1276809085&web_id=1276809085"></script>
   </div>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/video.js/7.3.0/alt/video.core.min.js"></script>
+
+  <script src="https://cdn.bootcss.com/videojs-contrib-hls/5.14.1/videojs-contrib-hls.min.js"></script>
+  
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/video.js/7.3.0/lang/zh-CN.js"></script> -->
 </body>
 </html>
