--- a/web/src/pages/kksk/show1.scss
+++ b/web/src/pages/kksk/show1.scss
@@ -15,7 +15,6 @@
 }
 
 .qrcode {
-  margin-top: -2rem;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -48,7 +47,7 @@
   table.kksklist {
     width: 100%;
     border-spacing: 0;
-    font-size: .9rem;
+    font-size: 1rem;
     border: solid .1rem $text-color;
     box-shadow: 0 0 1rem $light-bg-color;
     // font-family: 'DIN-black';
@@ -65,12 +64,12 @@
           color: white;
           .sub {
             opacity: 0.8;
-            font-size: 1rem;
+            // font-size: 1.1rem;
             margin-top: .3rem;
           }
 
-          &.runner { width: 8rem; }
-          &.game { width: 8.5rem; }
+          &.runner { width: 10rem; }
+          &.game { width: 10rem; }
         }
       }
     }
@@ -157,5 +156,21 @@
         }
       }
     }
+  }
+}
+
+.camera {
+  border: solid .1rem $text-color;
+  box-shadow: 0 0 1rem $light-bg-color;
+  width: 100%;
+  padding-bottom: 56.25%;
+  margin-bottom: 3rem;
+  position: relative;
+  .cbox {
+    position: absolute;
+    top: 0; left: 0; right: 0; bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
