--- a/web/src/pages/index.scss
+++ b/web/src/pages/index.scss
@@ -1,38 +1,163 @@
 @import '../layouts/vars';
 
-.ct {
-  max-width: $xsw;
-  margin: 0 auto;
+.index {
+  // h1, h2 {
+  //   color: $text-color !important;
+  // }
+  .cntitle {
+    margin-top: -.5rem !important;
+  }
+}
+
+.gamescontainer {
+  display: flex;
+  justify-content: center;
   padding: 0 1rem;
+  margin-top: 1rem;
+}
+.games {
+  $w: $page-width;
+  $gap: .3rem;
 
-  .tnalogo {
-    width: 12rem;
-    margin: 0 auto;
-    display: block;
-    margin-top: 3rem;
-    margin-bottom: 3rem;
+  display: grid;
+  width: $w;
+  height: $w / 4 - $gap;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr;
+  grid-gap: $gap;
 
-    @media #{$xs} {
-      width: 8rem;
-      margin-top: 2rem;
-      margin-bottom: 2rem;
+  .logo {
+    background-color: rgba(black, 0.6);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: .5rem;
+    border: solid 1px rgba($text-color, 0.5);
+
+    img {
+      max-width: 100%; max-height: 100%;
+    }
+  }
+  .series {
+    display: grid;
+    grid-template-rows: 1.5fr 1fr 1fr 1fr;
+    grid-gap: $gap;
+    position: relative;
+
+
+    .title {
+      background-color: rgba(black, 0.3);
+      border: solid 1px rgba($text-color, 0.5);
+
+      font-size: 2rem;
+      font-family: 'Cubano';
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding-top: 1.6rem;
+      position: relative;
+
+      .otype {
+        position: absolute;
+        font-size: .8rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        top: 3px; left: 9px; right: 3px;
+        height: 1.5rem;
+        &.online {
+          color: $cblue;
+          background-color: rgba($cblue, 0.1);
+        }
+        &.offline {
+          color: gold;
+          background-color: rgba(gold, 0.1);
+        }
+      }
+
+      .leftline {
+        position: absolute;
+        width: 3px;
+        left: 3px; top: 3px; bottom: 3px;
+      }
+    }
+
+    .activity {
+      background-color: rgba(black, 0.3);
+      border: solid 1px rgba($text-color, 0.5);
+      font-size: 1.5rem;
+      font-family: 'Cubano';
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+      color: $text-color;
+
+      .leftline {
+        position: absolute;
+        width: 3px;
+        left: 3px; top: 3px; bottom: 3px;
+      }
+
+      &:hover {
+        background-color: $cblue;
+        color: rgba(black, 0.9);
+        .leftline { display: none; }
+      }
+
+      &.nolink {
+        pointer-events: none;
+        opacity: 0.4;
+        border-style: dashed;
+        .leftline {
+          display: none;
+        }
+      }
     }
   }
 
-  .intro {
-    margin-bottom: 3rem;
-    text-align: center;
+  @media #{$xs} {
+    display: block;
+    width: 80%;
+    height: auto;
+
+    .logo {
+      margin-bottom: 2rem;
+    }
+
+    .series {
+      display: block;
+      margin-bottom: 2rem;
+      .activity {
+        padding: .5rem 0;
+        margin-top: -1px;
+      }
+      &:last-child {
+        margin-bottom: 0;
+      }
+    }
+  }
+}
+
+.gamefooter {
+  $w: $page-width;
+  width: $w;
+  margin: 0 auto;
+  margin-top: 3rem;
+  display: flex;
+  justify-content: center;
+  div {
+    margin-right: 1.5rem;
   }
 
-  a.ok, a.no {
-    font-size: 1.5rem;
-    font-family: 'DIN-Black';
+  @media #{$xs} {
+    width: auto;
     display: block;
-    margin-bottom: 0.5rem;
-    text-decoration: underline;
+    text-align: center;
+    margin-bottom: 3rem;
 
-    &.no {
-      color: rgba(white, 0.3);
+    div:last-child {
+      margin-top: 1rem;
     }
   }
 }
