--- a/web/src/global.scss
+++ b/web/src/global.scss
@@ -1,6 +1,6 @@
 @import './assets/fonts/Orbitron/Orbitron.css';
 @import './assets/fonts/Cubano/Cubano.css';
-@import './assets/fonts/DIN-Black/DIN-Black.css';
+@import './assets/fonts/DIN-Black.css';
 
 html, body, #root {
   height: 100%;
