--- a/web/src/pages/index.scss
+++ b/web/src/pages/index.scss
@@ -1,163 +1,308 @@
 @import '../layouts/vars';
 
-.index {
-  // h1, h2 {
-  //   color: $text-color !important;
-  // }
-  .cntitle {
-    margin-top: -.5rem !important;
+@mixin GridBorder {
+  background-color: rgba(black, 0.3);
+  border: solid 1px rgba($text-color, 0.5);
+}
+
+@mixin GridBorderDark {
+  background-color: rgba(black, 0.6);
+  border: solid 1px rgba($text-color, 0.5);
+}
+
+@mixin gridLightBorder ($color) {
+  position: relative;
+  padding: 3px 3px 3px 9px;
+
+  &:before {
+    content: '';
+    position: absolute;
+    width: 3px;
+    left: 3px; top: 3px; bottom: 3px;
+    background-color: $color;
   }
 }
 
-.gamescontainer {
+@mixin actType ($color) {
   display: flex;
+  align-items: center;
+  padding: 0 .5rem;
+  font-size: .8rem;
+  background-color: rgba($color, 0.15);
+  color: lighten($color, 15%); 
   justify-content: center;
-  padding: 0 1rem;
-  margin-top: 1rem;
 }
-.games {
-  $w: $page-width;
-  $gap: .3rem;
+
+@mixin actName ($color) {
+  display: flex;
+  align-items: center;
+  font-family: $fontDIN;
+  font-size: 2rem;
+  color: lighten($color, 15%); 
+  padding: 0 .5rem;
+  justify-content: center;
+}
+
+@mixin season ($color) {
+  display: flex;
+  align-items: center;
+  font-family: $fontDIN;
+  font-size: 1.2rem;
+  color: lighten($color, 40%); 
+  padding: 0 .5rem;
+  justify-content: center;
+  flex-direction: column;
+  .s {
+    font-size: 1rem;
+  }
+}
+
+@mixin nolink {
+  opacity: 0.4;
+  border-style: dashed;
+}
+
+@mixin linkHover ($color) {
+  &:hover {
+    cursor: pointer;
+    background-color: lighten($color, 15%);
+    * { color: rgba(black, 0.9) !important; }
+    &:before { opacity: 0; }
+  }
+}
+
+.showGrids {
+  $GAP: .3rem;
+  $MIN-GRID-WIDTH: 8rem;
 
   display: grid;
-  width: $w;
-  height: $w / 4 - $gap;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr;
-  grid-gap: $gap;
+  grid-gap: $GAP;
+  grid-template-columns: repeat(auto-fill, minmax($MIN-GRID-WIDTH, 1fr));
+
+  margin-bottom: .3rem;
+  margin-top: .5rem;
+
+  &:before {
+    content: '';
+    width: 0;
+    padding-bottom: 75%;
+    grid-column: 1 / span 2;
+    grid-row: 1 / span 2;
+  }
 
   .logo {
-    background-color: rgba(black, 0.6);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: .5rem;
-    border: solid 1px rgba($text-color, 0.5);
-
-    img {
-      max-width: 100%; max-height: 100%;
-    }
+    @include GridBorderDark;
+    grid-column: 1 / span 2;
+    grid-row: 1 / span 2;
   }
-  .series {
+
+  .show {
+    // @include GridBorder;
+    grid-row: span 2;
+    grid-column: span 3;
+
     display: grid;
-    grid-template-rows: 1.5fr 1fr 1fr 1fr;
-    grid-gap: $gap;
-    position: relative;
+    grid-gap: $GAP;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
 
+    .tnaTitle {
+      @include GridBorder;
+      @include gridLightBorder($ctna);
+      grid-column: span 3;
 
-    .title {
-      background-color: rgba(black, 0.3);
-      border: solid 1px rgba($text-color, 0.5);
+      display: grid;
+      grid-template-rows: 1.5rem 1fr;
+      grid-gap: 3px;
 
-      font-size: 2rem;
-      font-family: 'Cubano';
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      padding-top: 1.6rem;
-      position: relative;
-
-      .otype {
-        position: absolute;
-        font-size: .8rem;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        top: 3px; left: 9px; right: 3px;
-        height: 1.5rem;
-        &.online {
-          color: $cblue;
-          background-color: rgba($cblue, 0.1);
-        }
-        &.offline {
-          color: gold;
-          background-color: rgba(gold, 0.1);
-        }
+      .actType {
+        @include actType($ctna);
       }
-
-      .leftline {
-        position: absolute;
-        width: 3px;
-        left: 3px; top: 3px; bottom: 3px;
+      .actName {
+        @include actName($ctna);
       }
     }
 
-    .activity {
-      background-color: rgba(black, 0.3);
-      border: solid 1px rgba($text-color, 0.5);
-      font-size: 1.5rem;
-      font-family: 'Cubano';
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      position: relative;
-      color: $text-color;
+    .tna1tna2 {
+      display: grid;
+      grid-gap: $GAP;
+      grid-template-rows: 1fr 1fr;
 
-      .leftline {
-        position: absolute;
-        width: 3px;
-        left: 3px; top: 3px; bottom: 3px;
-      }
+      .tna1, .tna2 {
+        @include GridBorder;
+        @include gridLightBorder($ctna);
+        @include nolink;
 
-      &:hover {
-        background-color: $cblue;
-        color: rgba(black, 0.9);
-        .leftline { display: none; }
-      }
-
-      &.nolink {
-        pointer-events: none;
-        opacity: 0.4;
-        border-style: dashed;
-        .leftline {
-          display: none;
+        .season {
+          height: 100%;
+          @include season($ctna);
         }
       }
+    }
+
+    .tna3 {
+      @include GridBorder;
+      @include gridLightBorder($ctna);
+      @include linkHover($ctna);
+      grid-column: span 2;
+
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+
+      .s1 {
+        @include season($ctna);
+        font-size: 1.5rem;
+      }
+      .s2 {
+        @include season($ctna);
+        font-size: 1rem;
+      }
+    }
+
+    .ritTitle, .shotTitle {
+      @include GridBorder;
+      @include gridLightBorder($crit);
+      @include linkHover($crit);
+      grid-column: span 3;
+
+      display: grid;
+      grid-template-rows: 1.5rem 1fr;
+      grid-gap: 3px;
+
+      .actType {
+        @include actType($crit);
+      }
+      .actName {
+        @include actName($crit);
+      }
+    }
+
+    .kkskTitle {
+      @include GridBorder;
+      @include gridLightBorder($ckksk);
+      grid-column: span 3;
+
+      display: grid;
+      grid-template-rows: 1.5rem 1fr;
+      grid-gap: 3px;
+
+      .actType {
+        @include actType($ckksk);
+      }
+      .actName {
+        @include actName($ckksk);
+      }
+    }
+
+    .kksk1 {
+      @include GridBorder;
+      @include gridLightBorder($ckksk);
+      @include linkHover($ckksk);
+
+      .season {
+        height: 100%;
+        @include season($ckksk);
+      }
+    }
+
+    .kksknext {
+      @include GridBorder;
+      @include gridLightBorder($ckksk);
+      @include linkHover($ckksk);
+      grid-column: span 2;
+
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+
+      .s1 {
+        @include season($ckksk);
+        font-size: 1.5rem;
+      }
+      .s2 {
+        @include season($ckksk);
+        font-size: 1rem;
+      }
+    }
+
+    .xgames {
+      @include GridBorder;
+      @include gridLightBorder(#fff);
+      @include nolink();
+      grid-column: span 3;
+      grid-row: span 2;
+
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      font-family: $fontDIN;
+      // color: lighten($ctna, 15%);
+      color: #fff;
+      .s1 { font-size: 2rem; margin-bottom: .5rem;}
+      .s2 { font-size: 1.5rem; margin-bottom: 1rem;}
+      .s3 { font-size: 1rem; }
     }
   }
 
   @media #{$xs} {
-    display: block;
-    width: 80%;
-    height: auto;
-
-    .logo {
-      margin-bottom: 2rem;
+    grid-template-columns: 1fr;
+    margin-bottom: 1rem;
+    &:before {
+      grid-column: 1 / span 1;
+      grid-row: 1 / span 1;
     }
-
-    .series {
-      display: block;
-      margin-bottom: 2rem;
-      .activity {
-        padding: .5rem 0;
-        margin-top: -1px;
-      }
-      &:last-child {
-        margin-bottom: 0;
-      }
+    .logo {
+      grid-column: 1 / span 1;
+      grid-row: 1 / span 1;
+    }
+    .show {
+      grid-column: span 1;
+      grid-row: span 1;
+    }
+    .xgames {
+      .s1 { margin-top: 1rem; }
+      .s3 { margin-bottom: 1rem; }
     }
   }
 }
 
 .gamefooter {
-  $w: $page-width;
-  width: $w;
-  margin: 0 auto;
-  margin-top: 3rem;
-  margin-bottom: 3rem;
-  display: flex;
-  justify-content: center;
-  div {
-    margin-right: 1.5rem;
+  $GAP: .3rem;
+  $MIN-GRID-WIDTH: 16rem;
+
+  display: grid;
+  grid-gap: $GAP;
+  grid-template-columns: repeat(auto-fill, minmax($MIN-GRID-WIDTH, 1fr));
+
+  margin-bottom: 5rem;
+  margin-top: 1rem;
+
+  .fg, .fg1 {
+    background-color: rgba(black, 0.3);
+    border: solid 1px rgba($text-color, 0.5);
+    display: flex;
+    align-items: center;
+
+    label {
+      // background-color: $cblue;
+      // color: #333;
+      background-color: rgba(black, 0.3);
+      margin: 3px;
+      padding: .4rem .8rem;
+      margin-right: .8rem;
+    }
+  }
+
+  .fg1 {
+    justify-content: center;
   }
 
   @media #{$xs} {
-    width: auto;
-    display: block;
-    text-align: center;
-
-    div:last-child {
-      margin-top: 1rem;
-    }
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
   }
 }
