--- a/web/src/layouts/_vars.scss
+++ b/web/src/layouts/_vars.scss
@@ -19,6 +19,9 @@ $ctna: #01b0ff;
 $ckksk: #db2d4c;
 $crit: darken(#fdb762, 10%);
 
+$chuya: #f38c03;
+$cbili: #03b0ff;
+
 $fontCubano: 'Cubano', '微软雅黑';
 $fontDIN: 'DIN-Black', '微软雅黑';
 $fontOrbitron: 'Orbitron', '微软雅黑';
@@ -47,3 +50,7 @@ $xsw: 33.9rem; // 542.4px
 $smw: 47.9rem; // 766.4px
 $mdw: 61.9rem; // 990.4px
 $lgw: 74.9rem; // 1198.4px
+
+// ------
+
+$GRID-GAP: .3rem;
