--- a/web/src/pages/tna3/index.scss
+++ b/web/src/pages/tna3/index.scss
@@ -1,94 +1,305 @@
 @import '../../layouts/vars';
 
-.tna3 {
-  margin: 0 auto;
-  text-align: center;
-  max-width: 20rem;
+@mixin GridBorder {
+  background-color: rgba(black, 0.3);
+  border: solid 1px rgba($text-color, 0.5);
+}
 
-  h1 {
-    font-size: 5rem;
-    @include light-title;
-    margin: 2rem 0;
-  }
+@mixin GridBorderDark {
+  background-color: rgba(black, 0.6);
+  border: solid 1px rgba($text-color, 0.5);
+}
 
-  h2 {
-    font-size: 2.5rem;
-    @include light-title;
-    margin: 1.5rem 0;
-  }
+@mixin textCenter {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 
-  p {
-    font-size: 1.2rem;
-    @include light-title;
-    margin-bottom: 3rem;
+@mixin withGridName ($color) {
+  position: relative;
+  padding: 3px;
+
+  display: grid;
+  grid-template-rows: 1fr 2fr;
+  grid-gap: $GRID-GAP;
+
+  .gridName {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0 .5rem;
+    font-size: .8rem;
+    background-color: rgba($color, 0.15);
+    color: lighten($color, 15%); 
   }
 }
 
-.coollink {
-  display: flex;
+@mixin titleShadow ($color) {
+  text-shadow: 0 0 1rem $color;
+  color: lighten($color, 20%);
+}
 
-  .arrow {
-    width: 4.5rem;
-
-    .a1, .a2, .a3 {
-      position: relative;
-      animation: cool 1s infinite;
-
-      &:before {
-        content: '';
-        box-sizing: border-box;
-        position: absolute;
-        width: 1.2rem; height: 1.2rem;
-        border-style: solid;
-        border-right: 0 none;
-        border-bottom: 0 none;
-        // border-radius: 0;
-        border-color: white;
-        border-width: 0.4rem;
-        transform: rotate(135deg);
-        left: -0.25rem;
-        top: 1rem;
-      }
-    }
-
-    .a1 {
-      transform: translateX(0);
-      animation-delay: 0;
-    }
-    .a2 {
-      transform: translateX(1.1rem);
-      animation-delay: .2s;
-    }
-    .a3 {
-      transform: translateX(2.2rem);
-      animation-delay: .4s;
+.tna3 {
+  .hd {
+    h1, h2 {
+      text-shadow: 0 0 1rem $light-bg-color !important;
     }
   }
-
-  a { 
-    flex: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: $light-bg-color;
-    color: white; 
-    font-size: 1.5rem;
-    font-weight: bold;
-    border-radius: 0.5rem;
-    height: 3.2rem;
-    text-shadow: 0 0 0.5rem rgba(black, 0.3);
-    margin-right: -0.5rem;
+  h2 {
+    font-family: $fontDIN;
+    text-shadow: 0 0 1rem $light-bg-color;
   }
 
   @media #{$xs} {
-    a {
+    h2 {
       font-size: 1.2rem;
     }
   }
 }
 
-.formResult {
-  opacity: 0.5;
-  color: white;
-  font-size: 1rem;
+.timeandreg {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: $GRID-GAP;
+  margin-bottom: $GRID-GAP;
+
+  .info {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-gap: $GRID-GAP;
+    &:before {
+      content: ''; width: 0; padding-bottom: 75%;
+      grid-column: 1 / span 1; grid-row: 1 / span 1;
+    }
+    .time {
+      @include GridBorder;
+      @include withGridName($cred);
+      grid-column: 1 / span 2; grid-row: 1 / span 1;
+      h2 {
+        margin: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        @include titleShadow($cred);
+      }
+    }
+    .huya, .bili {
+      @include GridBorder;
+      .logoi {
+        margin-top: .2rem;
+        margin-bottom: .2rem;
+      }
+    }
+    .huya {
+      @include withGridName($chuya);
+      &:hover {
+        background-color: rgba($chuya, 0.5);
+        .gridName { color: black; }
+      }
+    }
+    .bili {
+      @include withGridName($cbili);
+      &:hover {
+        background-color: rgba($cbili, 0.5);
+        .gridName { color: black; }
+      }
+    }
+  }
+  .reg {
+    @include GridBorder;
+    @include withGridName($ctna);
+
+    .btns {
+      display: grid;
+      grid-template-columns: 2fr 1fr;
+      grid-gap: $GRID-GAP;
+
+      .b1, .b2 {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-weight: bold;
+        font-size: 1.2rem;
+        // border: solid 1px rgba(white, 0.2);
+        text-shadow: 0 0 .5rem rgba(black, 0.3);
+        position: relative;
+        &:before {
+          content: '';
+          position: absolute;
+          pointer-events: none;
+          left: 0; right: 0; bottom: 0; top: 0;
+          // background-color: rgba(black, 0.3);
+          border-bottom: solid 1px rgba(black, 0.3);
+          border-right: solid 1px rgba(black, 0.3);
+          border-top: solid 1px rgba(white, 0.3);
+          border-left: solid 1px rgba(white, 0.3);
+        }
+        &:hover:before {
+          background-color: rgba(white, 0.3)
+        }
+      }
+      .b1 {
+        background-color: darken($ctna, 0%);
+        color: white;
+      }
+      .b2 {
+        background-color: darken($ctna, 0%);
+        color: white;
+      }
+    }
+  }
+
+  @media #{$xs} {
+    grid-template-columns: 1fr;
+
+    .reg .btns {
+      .b1, .b2 { font-size: 1rem; }
+    }
+  }
+}
+
+.faqtimeline {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: $GRID-GAP;
+  margin-bottom: 5rem;
+
+  .timeline, .faq {
+    @include GridBorder();
+  }
+
+  .timeline, .faq {
+    h2 { 
+      margin: 0; 
+      padding: 1rem;
+      border-bottom: 2px solid rgba($ctna, 1);
+      text-align: center;
+    }
+  }
+
+  .timeline {
+    // display: grid;
+    // grid-template-rows: 3rem 1fr;
+    overflow: hidden;
+  }
+
+  @media #{$xs} {
+    grid-template-columns: 1fr;
+  }
+}
+
+.Timeline {
+  display: block;
+  width: 100%;
+  height: 100%;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  position: relative;
+
+  &:before {
+    content: '';
+    position: absolute;
+    top: 0; bottom: 0; left: 112px + 16px + 8px - 1px;
+    width: 2px; background-color: rgba($ctna, 1);
+  }
+
+  .timepoint, .duetimepoint {
+    display: grid;
+    grid-template-columns: 112px 1fr;
+    padding: 0 16px 16px;
+
+    .date {
+      text-align: right;
+      font-family: $fontDIN;
+      padding-right: 1rem;
+      line-height: 2rem;
+      color: lighten($ctna, 20%);
+    }
+    .event {
+      position: relative;
+      margin-top: 0.5rem;
+
+      &:before {
+        content: '';
+        width: 16px; height: 16px;
+        border-radius: 100%;
+        background-color: $ctna;
+        position: absolute;
+        top: 0; left: 0;
+      }
+
+      span {
+        display: inline-block;
+        background-color: rgba($ctna, .15);
+        color: lighten($ctna, 30%);
+        padding: 0.5rem 1rem;
+        border-radius: 0rem .5rem .5rem .5rem;
+        position: relative;
+        margin-top: .5rem;
+        margin-left: 2.8rem;
+
+        &:before {
+          content: '';
+          position: absolute;
+          $w: .5rem;
+          border-left: solid $w transparent;
+          border-bottom: solid $w transparent;
+          border-top: solid $w rgba($ctna, .15);
+          border-right: solid $w rgba($ctna, .15);
+          top: 0; left: - $w * 2;
+        }
+      }
+    }
+  }
+
+  .duetimepoint {
+    .date { color: lighten($cred, 20%); }
+    .event {
+      &:before {
+        background-color: $cred;
+        box-shadow: 0 0 .3rem .3rem rgba($cred, 0.5);
+      }
+      span {
+        background-color: rgba($cred, .15);
+        color: lighten($cred, 30%);
+
+        &:before {
+          border-top: solid .5rem rgba($cred, .15);
+          border-right: solid .5rem rgba($cred, .15);
+        }
+      }
+    }
+  }
+}
+
+.FAQ {
+  padding: 1.5rem;
+  .qa {
+    margin-bottom: 1.5rem;
+    border-left: solid 2px rgba($ctna, 0.5);
+    padding-left: 0.6rem;
+    margin-left: -1rem;
+    // line-height: 1.414;
+
+    label {
+      font-family: $fontDIN;
+      color: $ctna;
+      // font-size: 1.2rem;
+      margin-right: .5rem;
+    }
+    span {
+      // font-size: 1.2rem;
+    }
+    div:first-child {
+      // border-bottom: dashed 1px rgba($text-color, 0.5);
+      margin-bottom: .3rem;
+      color: lighten($ctna, 20%);
+    }
+    div:last-child {
+      // border-bottom: dashed 1px rgba($text-color, 0.5);
+      // color: lighten($ctna, 30%);
+    }
+  }
 }
