--- a/web/src/pages/tna3/index.scss
+++ b/web/src/pages/tna3/index.scss
@@ -23,7 +23,7 @@
 
   display: grid;
   grid-template-rows: 1fr 2fr;
-  grid-gap: $GRID-GAP;
+  grid-gap: 3px;
 
   .gridName {
     display: flex;
@@ -39,6 +39,33 @@
 @mixin titleShadow ($color) {
   text-shadow: 0 0 1rem $color;
   color: lighten($color, 20%);
+}
+
+@mixin colorBtn ($color) {
+  display: block;
+  background-color: $color;
+  color: white;
+  // font-family: $fontDIN;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-shadow: 0 0 0.5rem rgba(black, 0.3);
+  position: relative;
+
+  &:before {
+    content: '';
+    position: absolute;
+    pointer-events: none;
+    left: 0; right: 0; bottom: 0; top: 0;
+    // background-color: rgba(black, 0.3);
+    border-bottom: solid 1px rgba(black, 0.3);
+    border-right: solid 1px rgba(black, 0.3);
+    border-top: solid 1px rgba(white, 0.3);
+    border-left: solid 1px rgba(white, 0.3);
+  }
+  &:hover:before {
+    background-color: rgba(white, 0.3)
+  }
 }
 
 .tna3 {
@@ -114,40 +141,21 @@
     .btns {
       display: grid;
       grid-template-columns: 2fr 1fr;
-      grid-gap: $GRID-GAP;
+      grid-gap: 3px;
 
       .b1, .b2 {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-weight: bold;
+        @include colorBtn($ctna);
         font-size: 1.2rem;
-        // border: solid 1px rgba(white, 0.2);
-        text-shadow: 0 0 .5rem rgba(black, 0.3);
-        position: relative;
-        &:before {
-          content: '';
-          position: absolute;
-          pointer-events: none;
-          left: 0; right: 0; bottom: 0; top: 0;
-          // background-color: rgba(black, 0.3);
-          border-bottom: solid 1px rgba(black, 0.3);
-          border-right: solid 1px rgba(black, 0.3);
-          border-top: solid 1px rgba(white, 0.3);
-          border-left: solid 1px rgba(white, 0.3);
-        }
-        &:hover:before {
-          background-color: rgba(white, 0.3)
-        }
+        font-weight: bold;
       }
-      .b1 {
-        background-color: darken($ctna, 0%);
-        color: white;
-      }
-      .b2 {
-        background-color: darken($ctna, 0%);
-        color: white;
-      }
+    }
+
+    .bmjz {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 1.2rem;
+      opacity: 0.5;
     }
   }
 
