--- a/web/src/pages/document.ejs
+++ b/web/src/pages/document.ejs
@@ -12,12 +12,15 @@
   <div id="root"></div>
 
   <div style='display:none;'>
-  <script type="text/javascript" src="https://s5.cnzz.com/z_stat.php?id=1276809085&web_id=1276809085"></script>
+  <script type="text/javascript" src="//s5.cnzz.com/z_stat.php?id=1276809085&web_id=1276809085"></script>
   </div>
+
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/video.js/7.3.0/alt/video.core.min.js"></script>
 
   <script src="https://cdn.bootcss.com/videojs-contrib-hls/5.14.1/videojs-contrib-hls.min.js"></script>
   
   <script src="https://cdnjs.cloudflare.com/ajax/libs/video.js/7.3.0/lang/zh-CN.js"></script> -->
+
+  <script src="//cdn.bootcss.com/d3/5.11.0/d3.min.js"></script>
 </body>
 </html>
