--- a/web/src/global.scss
+++ b/web/src/global.scss
@@ -2,6 +2,9 @@
 @import './assets/fonts/Cubano/Cubano.css';
 @import './assets/fonts/DIN-Black.css';
 
+// 嵌入的中文字体
+@import './assets/fonts/embed-cn/tna-site-title.css';
+
 html, body, #root {
   height: 100%;
 }
