--- a/web/src/layouts/index.scss
+++ b/web/src/layouts/index.scss
@@ -1,10 +1,14 @@
 @import './vars';
 
-.BasicLayout {
+@mixin global {
   color: $text-color;
   font-size: 1rem;
   line-height: 1.41421356237;
   min-height: 100vh;
+}
+
+.BasicLayout {
+  @include global;
 
   a { 
     color: $link-color; 
@@ -16,6 +20,33 @@
     width: 100vw;
     height: 100%;
     background: linear-gradient(to bottom, #192224 0%, #21728b 100%);
+    z-index: -1;
+
+    &:before {
+      content: '';
+      position: fixed;
+      width: 100vw;
+      height: 100%;
+      background: url('../assets/images/bg-pattern.png') repeat;
+    }
+  }
+}
+
+.KKSK2Layout {
+  @include global;
+
+  a { 
+    color: $link-color; 
+    text-decoration: none;
+  }
+
+  .bg {
+    position: fixed;
+    width: 100vw;
+    height: 100%;
+    $c1: darken($ckksk, 50%);
+    $c2: darken($ckksk, 30%);
+    background: linear-gradient(to bottom, $c1 0%, $c2 100%);
     z-index: -1;
 
     &:before {
