--- a/web/src/pages/kksk2/index.scss
+++ b/web/src/pages/kksk2/index.scss
@@ -1,38 +1,19 @@
 @import '../../layouts/vars';
 
+$lightKKSKC: lighten($ckksk, 40%);
+$textShadowKKSKC: 0 0 1rem lighten($ckksk, 10%);
+$borderKKSKC: lighten($ckksk, 10%);
+
+@mixin TitleBase {
+  font-family: $fontDIN;
+  font-weight: bold;
+  color: $lightKKSKC;
+  text-shadow: $textShadowKKSKC;
+}
+
 @mixin GridBorder {
   background-color: rgba(black, 0.3);
-  border: solid 1px rgba($text-color, 0.5);
-}
-
-@mixin GridBorderDark {
-  background-color: rgba(black, 0.6);
-  border: solid 1px rgba($text-color, 0.5);
-}
-
-@mixin GridBorderTD {
-  background-color: rgba(black, 0.3);
-  border: solid 1px rgba($cblue, 0.15);
-}
-
-@mixin gridLightBorder ($color) {
-  position: relative;
-  padding: 3px 3px 3px 12px;
-
-  &:before {
-    content: '';
-    position: absolute;
-    width: 3px;
-    left: 3px; top: 3px; bottom: 3px;
-    background-color: $color;
-  }
-}
-
-@mixin textCenter {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  border: solid 1px rgba($lightKKSKC, 0.5);
 }
 
 @mixin withGridName ($color) {
@@ -88,23 +69,40 @@
 
 @mixin GridH2 {
   h2 {
+    @include TitleBase;
     margin: 0; 
     padding: 1rem;
-    border-bottom: 2px solid rgba($ctna, 1);
+    border-bottom: 2px solid $borderKKSKC;
     text-align: center;
     font-size: 1.3rem;
   }
 }
 
-.tna3 {
+.kksk2 {
   .hd {
+    display: flex;
+    align-items: center;
+
     h1, h2 {
-      text-shadow: 0 0 1rem $light-bg-color !important;
+      @include TitleBase;
+    }
+
+    .kksklogo {
+      // position: absolute;
+      width: 9rem; height: 9rem;
+      margin-right: 1rem;
+      // top: 0; left: 0;
+      background-image: url('//tna-web.oss-ap-southeast-1.aliyuncs.com/assets/kksk2019b.png');
+      background-position: center;
+      background-size: contain;
+      background-repeat: no-repeat;
     }
   }
-  h2 {
-    font-family: $fontDIN;
-    text-shadow: 0 0 1rem $light-bg-color;
+
+  @media #{$xs} {
+    .hd .kksklogo {
+      width: 6rem; height: 6rem;
+    }
   }
 
   @media #{$xs} {
@@ -131,12 +129,13 @@
     .time {
       @include GridBorder;
       @include withGridName($cred);
-      grid-column: 1 / span 2; grid-row: 1 / span 1;
+      grid-column: 1 / span 3; grid-row: 1 / span 1;
       h2 {
         margin: 0;
         display: flex;
         justify-content: center;
         align-items: center;
+        font-family: $fontDIN;
         @include titleShadow($cred);
       }
     }
@@ -154,27 +153,38 @@
         .gridName { color: black; }
       }
     }
-    .bili {
-      @include withGridName($cbili);
-      &:hover {
-        background-color: rgba($cbili, 0.5);
-        .gridName { color: black; }
-      }
+  }
+  .hright {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    grid-gap: $GRID-GAP;
+  }
+
+  .gcores {
+    @include GridBorder;
+    @include withGridName($cgcores);
+    &:hover {
+      background-color: rgba($cgcores, 0.5);
+      .gridName { color: black; }
     }
   }
   .reg {
     @include GridBorder;
-    @include withGridName($ctna);
+    @include withGridName($ckksk);
 
     .btns {
       display: grid;
-      grid-template-columns: 2fr 1fr;
+      grid-template-columns: 1fr;
       grid-gap: 3px;
 
-      .b1, .b2 {
-        @include colorBtn($ctna);
+      .b {
+        @include colorBtn($ckksk);
         font-size: 1.2rem;
         font-weight: bold;
+
+        @media #{$xs} {
+          font-size: 1rem;
+        }
       }
     }
 
@@ -233,7 +243,7 @@
     content: '';
     position: absolute;
     top: 0; bottom: 0; left: 112px + 16px + 8px - 1px;
-    width: 2px; background-color: rgba($ctna, 1);
+    width: 2px; background-color: $borderKKSKC;
   }
 
   .timepoint, .duetimepoint {
@@ -246,7 +256,7 @@
       font-family: $fontDIN;
       padding-right: 1rem;
       line-height: 2rem;
-      color: lighten($ctna, 20%);
+      color: lighten($ckksk, 20%);
     }
     .event {
       position: relative;
@@ -256,15 +266,15 @@
         content: '';
         width: 16px; height: 16px;
         border-radius: 100%;
-        background-color: $ctna;
+        background-color: $borderKKSKC;
         position: absolute;
         top: 0; left: 0;
       }
 
       span {
         display: inline-block;
-        background-color: rgba($ctna, .15);
-        color: lighten($ctna, 30%);
+        background-color: rgba($ckksk, .15);
+        color: lighten($ckksk, 30%);
         padding: 0.5rem 1rem;
         border-radius: 0rem .5rem .5rem .5rem;
         position: relative;
@@ -277,8 +287,8 @@
           $w: .5rem;
           border-left: solid $w transparent;
           border-bottom: solid $w transparent;
-          border-top: solid $w rgba($ctna, .15);
-          border-right: solid $w rgba($ctna, .15);
+          border-top: solid $w rgba($ckksk, .15);
+          border-right: solid $w rgba($ckksk, .15);
           top: 0; left: - $w * 2;
         }
       }
@@ -335,156 +345,79 @@
   }
 }
 
-$baomingH2Color: $ctna;
-$baomingBorderColor: rgba($baomingH2Color, 0.5);
-$baomingHeaderColor: $cblue;
+.Days {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: $GRID-GAP;
+  margin-bottom: $GRID-GAP;
 
-.BaoMing {
-  @include GridBorder;
-  @include GridH2;
-  border-color: $baomingBorderColor;
-  border-bottom: 0 none;
-  h2 {
-    border-bottom-color: $baomingH2Color;
+  .d {
+    @include GridBorder();
+    @include GridH2;
+    color: $lightKKSKC;
+    div {
+      padding: 0.5rem;
+      opacity: 0.5;
+      text-align: center;
+    }
   }
 }
 
-.BaoMingHeader {
-  display: grid;
-  grid-template-columns: 3fr 2.5fr 2.5fr;
-  grid-gap: $GRID-GAP;
+.HangZhou {
+  @include GridBorder();
+}
 
-  div {
-    @include GridBorder;
-    padding: 0.3rem 0.6rem;
-    border-color: rgba($baomingHeaderColor, 0.5);
-    background-color: rgba($baomingHeaderColor, 0.1);
-    color: lighten($cblue, 30%); 
+.Games {
+  display: grid;
+  grid-gap: $GRID-GAP;
+  grid-template-columns: repeat(10, 1fr);
+  grid-auto-rows: 1fr;
+  margin-bottom: $GRID-GAP * 2;
+  &:before {
+    content: ''; width: 0; padding-bottom: percentage(4 / 3);
+    grid-column: 1 / span 1; grid-row: 1 / span 1;
   }
 
   @media #{$xs} {
-    grid-template-columns: 1fr 1fr;
-    div.gameh {
-      grid-column: span 2;
-    }
+    grid-template-columns: repeat(5, 1fr);
   }
-}
 
-.BaoMingList {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-gap: $GRID-GAP;
-  margin-bottom: $GRID-GAP * 2;
+  .game:first-child {
+    grid-column: 1 / span 1; grid-row: 1 / span 1;
+  }
 
-  @include GridBorder;
-  padding: $GRID-GAP;
-  border-color: $baomingBorderColor;
-  background: lighten(#0e2127, 7%);
-  border-top: 0 none;
-
-  .showItem {
-    display: grid;
-    grid-template-columns: 3fr 2.5fr 2.5fr;
-    grid-gap: $GRID-GAP;
-
-    font-family: $fontDINM;
-    border-bottom: solid 1px $baomingBorderColor;
-    padding-bottom: $GRID-GAP;
-
-    &:last-child {
-      border-bottom: 0 none;
-      padding-bottom: 0;
-    }
-
-    .left {
-      // @include GridBorder;
-      grid-column: span 1;
-      display: grid;
-      grid-template-columns: 1fr 3fr;
-      grid-gap: $GRID-GAP;
-    }
-    .right {
-      grid-column: span 2;
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      grid-template-rows: 1fr 1fr;
-      grid-gap: $GRID-GAP;
-    }
+  .game {
+    @include GridBorder;
+    position: relative;
+    border-style: dashed;
 
     .cover {
-      @include GridBorderTD();
-      .coveri {
-        padding-bottom: 75%;
-        position: relative;
-        
-        .img {
-          position: absolute;
-          width: 100%; height: 100%;
-          background-position: center;
-          background-size: cover;
-          background-repeat: no-repeat;
-        }
-      }
+      position: absolute;
+      width: 100%; height: 100%;
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      opacity: 0.382;
     }
 
-    .name {
-      @include GridBorderTD();
-      @include gridLightBorder($cblue);
-      // background-color: rgba($cblue, 0.05);
-      color: lighten($cblue, 30%); 
+    span {
+      position: absolute;
+      width: 100%; height: 100%;
       display: flex;
       justify-content: center;
-      flex-direction: column;
-      padding-left: 1rem;
-
-      .en {
-        opacity: 0.6;
-        font-size: .8rem;
-        margin-top: .2rem;
-      }
-    }
-
-    .category, .player, .time, .guide {
-      grid-column: span 1;
-      grid-row: span 1;
-      @include GridBorderTD();
-      display: flex;
       align-items: center;
-      padding: 0.3rem .6rem;
-      white-space: nowrap;
-      overflow: hidden;
+      font-size: 4rem;
+      @include TitleBase;
+      pointer-events: none;
     }
 
-    .guide, .player {
-      position: relative;
-      padding-left: 3.4rem;
-      .label {
-        position: absolute;
-        top: 3px; left: 3px; bottom: 3px;
-        font-size: .9rem;
-        color: $ctna;
-        background-color: rgba($ctna, 0.2);
-        padding: 0 .5rem;
-        display: flex;
-        align-items: center;
-        color: lighten($ctna, 15%);
+    &.ok {
+      border-style: solid;
+      .cover {
+        opacity: 1;
       }
-    }
-
-    .category {
-      // font-family: $fontDIN;
-      // font-weight: bold;
-      color: lighten($ctna, 15%);
-    }
-
-    .time {
-      color: $c1st;
-    }
-
-    @media #{$xs} {
-      grid-template-columns: 1fr;
-      .left, .right {
-        grid-column: span 1;
+      span {
+        display: none;
       }
     }
   }
