--- a/web/src/pages/index.scss
+++ b/web/src/pages/index.scss
@@ -71,14 +71,21 @@
   }
 }
 
+.siteENTitle {
+  color: white !important;
+}
+
 .siteCNTitle {
-  font-family: $font-tna-site-title !important;
-  font-size: 2.4rem !important;
-  margin-bottom: 1.6rem !important;
+  font-weight: bold !important;
+  // font-family: $font-tna-site-title !important;
+  letter-spacing: $GRID-GAP / 3;
+  font-size: 2rem !important;
+  margin-bottom: 2rem !important;
+  color: white !important;
 
   @media #{$xs} {
-    font-size: 1.6rem !important;
-    margin-bottom: 1.067rem !important;
+    font-size: 1.33rem !important;
+    margin-bottom: 1.33rem !important;
   }
 }
 
