--- a/web/src/components/kksk2/HangZhouMap.scss
+++ b/web/src/components/kksk2/HangZhouMap.scss
@@ -14,26 +14,27 @@
 
 .HangZhouMap {
   width: 100%; height: 100%;
+  // background-color: rgba($kksk2C1, 0.382);
   svg {
     display: block;
     .point {
       fill: transparent;
-      stroke: $cred;
+      stroke: $kksk2C1;
       stroke-width: 4px;
     }
     .point1 {
       fill: transparent;
-      stroke: $cred;
+      stroke: $kksk2C1;
       stroke-width: 4px;
       transform-origin: center;
       animation: cir 1s linear infinite;
     }
     .welcome {
       fill: rgba(black, 0.5);
-      stroke: rgba($corange, 0.2);
+      stroke: rgba($kksk2C1, 0.2);
     }
     .welcomeT {
-      fill: lighten($corange, 15%);
+      fill: lighten($kksk2C1, 30%);
       font-size: 14px;
     }
   }
