--- a/web/src/layouts/index.scss
+++ b/web/src/layouts/index.scss
@@ -42,19 +42,14 @@
 
   .bg {
     position: fixed;
-    width: 100vw;
-    height: 100%;
-    $c1: darken($ckksk, 50%);
-    $c2: darken($ckksk, 30%);
-    background: linear-gradient(to bottom, $c1 0%, $c2 100%);
-    z-index: -1;
+    width: 100vw; height: 100vh;
+    background-color: black;
+    z-index: -99;
 
-    &:before {
-      content: '';
-      position: fixed;
-      width: 100vw;
-      height: 100%;
-      background: url('../assets/images/bg-pattern.png') repeat;
+    video {
+      object-fit: cover;
+      width: 100%; height: 100%;
+      opacity: 0.382;
     }
   }
 }
