--- a/web/src/pages/tna3/index.scss
+++ b/web/src/pages/tna3/index.scss
@@ -4,6 +4,11 @@ $lightTNA: lighten($ctna, 40%);
 $textShadowTNA: 0 0 1rem lighten($ctna, 10%);
 $borderTNA: lighten($ctna, 10%);
 
+@mixin TitleBase {
+  font-family: $fontDIN;
+  text-shadow: 0 0 1rem $light-bg-color;
+}
+
 @mixin GridBorder {
   background-color: rgba(black, 0.3);
   border: solid 1px rgba($lightTNA, 0.5);
@@ -103,14 +108,39 @@ $borderTNA: lighten($ctna, 10%);
 }
 
 .tna3 {
+  h2 {
+    @include TitleBase;
+  }
+
   .hd {
+    display: flex;
+    align-items: center;
+
     h1, h2 {
-      text-shadow: 0 0 1rem $light-bg-color !important;
+      @include TitleBase;
+      font-weight: bold;
+    }
+
+    .tnalogo {
+      width: 12rem; height: 9rem;
+      margin-right: 1rem;
+      background-image: url('//tna-web.oss-ap-southeast-1.aliyuncs.com/assets/logo2019.png');
+      background-position: center;
+      background-size: contain;
+      background-repeat: no-repeat;
     }
   }
-  h2 {
-    font-family: $fontDIN;
-    text-shadow: 0 0 1rem $light-bg-color;
+
+  @media #{$xs} {
+    .hd .tnalogo {
+      width: 6rem; height: 6rem;
+    }
+  }
+
+  @media #{$xs} {
+    h2 {
+      font-size: 1.2rem;
+    }
   }
 }
 
